website/versioned_docs/version-2.5.x/docs/python/goals/test.mdx
---
    title: test
    position: 6
---

Run tests with Pytest.

---

Pants uses the popular [Pytest](https://docs.pytest.org/en/latest/) test runner to run Python tests. You may write your tests in Pytest-style, unittest-style, or mix and match both. 
[block:callout]
{
  "type": "success",
  "body": "Each file gets run as a separate process, which gives you fine-grained caching and better parallelism. Given enough cores, Pants will be able to run all your tests at the same time.\n\nThis also gives you fine-grained invalidation. If you run `./pants test ::`, and then you only change one file, then only tests that depended on that changed file will need to rerun.",
  "title": "Benefit of Pants: runs each file in parallel"
}
[/block]

[block:api-header]
{
  "title": "Examples"
}
[/block]
```bash
 # Run all tests in the repository.
./pants test ::

# Run all the tests in this target.
./pants test helloworld/util:test  

# Run just the tests in this file.
./pants test helloworld/util/lang_test.py  

 # Run just one test.
./pants test helloworld/util/lang_test.py -- -k test_language_translator 
```
[block:api-header]
{
  "title": "Pytest version and plugins"
}
[/block]
To change the Pytest version, set the `version` option in the `[pytest]` scope.

To install any [plugins](https://docs.pytest.org/en/latest/plugins.html), add the pip requirement string to `pytest_plugins` in the `[pytest]` scope, like this:
[block:code]
{
  "codes": [
    {
      "code": "[pytest]\nversion = \"pytest>=5.4\"\npytest_plugins.add = [\n  \"pytest-django>=3.9.0,<4\",\n  \"pytest-rerunfailures==9.0\",\n]",
      "language": "toml",
      "name": "pants.toml"
    }
  ]
}
[/block]
Alternatively, if you only want to install the plugin for certain tests, you can add the plugin to the `dependencies` field of your `python_tests`. See [Third-party dependencies](doc:python-third-party-dependencies) for how to install Python dependencies. For example:
[block:code]
{
  "codes": [
    {
      "code": "pytest-django==3.10.0",
      "language": "text",
      "name": "requirements.txt"
    },
    {
      "code": "python_tests(\n   name=\"tests\",\n   # Normally, Pants infers dependencies based on imports. \n   # Here, we don't actually import our plugin, though, so \n   # we need to explicitly list it.\n   dependencies=[\"//:pytest-django\"],\n)",
      "language": "python",
      "name": "helloworld/util/BUILD"
    }
  ]
}
[/block]

[block:callout]
{
  "type": "warning",
  "title": "Testing Python 2 code? Use Pytest 4.x",
  "body": "By default, Pants uses Pytest 6.x, which only supports Python 3 code. If you need to run Python 2 tests, set the option `version` in the scope `pytest` to `pytest>=4.6,<5`."
}
[/block]

[block:callout]
{
  "type": "warning",
  "title": "Avoid the `pytest-xdist` plugin",
  "body": "We do not recommend using this plugin because its concurrency conflicts with Pants' own parallelism. Using Pants will bring you similar benefits to `pytest-xdist` already: Pants will run each test target in parallel."
}
[/block]

[block:callout]
{
  "type": "info",
  "title": "Tip: plugins for better Pytest output",
  "body": "Add [`pytest-icdiff`](https://github.com/hjwp/pytest-icdiff#usage) and [`pygments`](https://github.com/pygments/pygments) to the option `pytest_plugins` for better error messages and diffs from Pytest."
}
[/block]

[block:api-header]
{
  "title": "Controlling output"
}
[/block]
By default, Pants only shows output for failed tests. You can change this by setting `--test-output` to one of `all`, `failed`, or `never`, e.g. `./pants test --output=all ::`.

You can permanently set the output format in your `pants.toml` like this:
[block:code]
{
  "codes": [
    {
      "code": "[test]\noutput = \"all\"",
      "language": "toml",
      "name": "pants.toml"
    }
  ]
}
[/block]

[block:callout]
{
  "type": "info",
  "title": "Tip: Use Pytest options to make output more or less verbose",
  "body": "See [\"Passing arguments to Pytest\"](doc:test#passing-arguments-to-pytest).\n\nFor example:\n\n```bash\n$ ./pants test project/app_test.py -- -q\n```\n\nYou may want to permanently set the Pytest option `--no-header` to avoid printing the Pytest version for each test run:\n\n```toml\n[pytest]\nargs = [\"--no-header\"]\n```"
}
[/block]

[block:api-header]
{
  "title": "Passing arguments to Pytest"
}
[/block]
To pass arguments to Pytest, put them at the end after `--`, like this:

```bash
$ ./pants test project/app_test.py -- -k test_function1 -vv -s
```

You can also use the `args` option in the `[pytest]` scope, like this:
[block:code]
{
  "codes": [
    {
      "code": "[pytest]\nargs = [\"-vv\"]",
      "language": "toml",
      "name": "pants.toml"
    }
  ]
}
[/block]

[block:callout]
{
  "type": "info",
  "title": "Tip: some useful Pytest arguments",
  "body": "See https://docs.pytest.org/en/latest/usage.html for more information.\n\n* `-k expression`: only run tests matching the expression.\n* `-v`: verbose mode.\n* `-s`: always print the stdout and stderr of your code, even if a test passes."
}
[/block]

[block:callout]
{
  "type": "warning",
  "title": "How to use Pytest's `--pdb` option",
  "body": "You must run `./pants test --debug` for this to work properly. See the section \"Running tests interactively\" for more information."
}
[/block]

[block:api-header]
{
  "title": "Config files"
}
[/block]
Pants will automatically include any relevant config files in the process's sandbox.

Specifically, Pants will look for `pytest.ini`, `pyproject.toml`, `tox.ini`, and `setup.cfg` in your build root and all parent directories of the test.
[block:api-header]
{
  "title": "`conftest.py`"
}
[/block]
Pytest uses [`conftest.py` files](https://docs.pytest.org/en/stable/fixture.html#conftest-py-sharing-fixture-functions) to share fixtures and config across multiple distinct test files. 

The default `sources` value for a `python_tests` target includes `conftest.py`. So, if you declare a BUILD file like this, the `conftest.py` will be included:

```python
python_tests(
    name="tests",
    timeout=120,
    # We leave off `sources` to use the default value.
)
```

Otherwise, you can explicitly include the `conftest.py` in the `sources` field of a `python_tests()` target.

Pants will also infer dependencies on any `confest.py` files in the current directory _and_ any ancestor directories, which mirrors how Pytest behaves. This requires that each `conftest.py` has a target referring to it. You can verify this is working correctly by running `./pants dependencies path/to/my_test.py` and confirming that each `conftest.py` file shows up. (You can turn off this feature by setting `conftests = false` in the `[python-infer]` scope.)
[block:api-header]
{
  "title": "Setting environment variables"
}
[/block]
Test runs are _hermetic_, meaning that they are stripped of the parent `./pants` process's environment variables. This is important for reproducibility, and it also increases cache hits.

To add any arbitrary environment variable back to the process, you can either add the environment variable to the specific tests with the `extra_env_vars` field on `python_tests` targets or to all your tests with the `[test].extra_env_vars` option. Generally, prefer the field `extra_env_vars` so that more of your tests are hermetic. 

With both `[test].extra_env_vars` and the `extra_env_vars` field, you can either hardcode a value or leave off a value to "allowlist" it and read from the parent `./pants` process's environment.
[block:code]
{
  "codes": [
    {
      "code": "[test]\nextra_env_vars = [\"VAR1\", \"VAR2=hardcoded_value\"]",
      "language": "toml",
      "name": "pants.toml"
    },
    {
      "code": "python_tests(\n    name=\"tests\",\n    extra_env_vars=[\"VAR3\", \"VAR4=hardcoded\"],\n)",
      "language": "python",
      "name": "project/BUILD"
    }
  ]
}
[/block]

[block:api-header]
{
  "title": "Force reruns with `--force`"
}
[/block]
To force your tests to run again, rather than reading from the cache, run `./pants test --force path/to/test.py`.
[block:api-header]
{
  "title": "Running tests interactively"
}
[/block]
Because Pants runs multiple test targets in parallel, you will not see your test results appear on the screen until the test has completely finished. This means that you cannot use debuggers normally; the breakpoint will never show up on your screen and the test will hang indefinitely (or timeout, if timeouts are enabled). 

Instead, if you want to run a test interactively—such as to use a debugger like `pdb`—run your tests with `./pants test --debug`. For example:
[block:code]
{
  "codes": [
    {
      "code": "def test_debug():\n    import pdb; pdb.set_trace()\n    assert 1 + 1 == 2",
      "language": "python",
      "name": "test_debug_example.py"
    },
    {
      "code": "$ <<pantscmd>> test --debug test_debug_example.py\n\n===================================================== test session starts =====================================================\nplatform darwin -- Python 3.6.10, pytest-5.3.5, py-1.8.1, pluggy-0.13.1\nrootdir: /private/var/folders/sx/pdpbqz4x5cscn9hhfpbsbqvm0000gn/T/.tmpn2li0z\nplugins: cov-2.8.1, timeout-1.3.4\ncollected 6 items\n\ntest_debug_example.py\n>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> PDB set_trace (IO-capturing turned off) >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\n> /private/var/folders/sx/pdpbqz4x5cscn9hhfpbsbqvm0000gn/T/.tmpn2li0z/test_debug_example.py(11)test_debug()\n-> assert 1 + 1 == 2\n(Pdb) 1 + 1\n2",
      "language": "text",
      "name": "Shell"
    }
  ]
}
[/block]
If you use multiple files with `test --debug`, they will run sequentially rather than in parallel.
[block:callout]
{
  "type": "info",
  "title": "Tip: using `ipdb` in tests",
  "body": "[`ipdb`](https://github.com/gotcha/ipdb) integrates IPython with the normal `pdb` debugger for enhanced features like autocomplete and improved syntax highlighting. `ipdb` is very helpful when debugging tests.\n\nTo be able to access `ipdb` when running tests, add this to your `pants.toml`:\n\n```toml\n[pytest]\npytest_plugins.add = [\"ipdb\"]\n```\n\nThen, you can use `import ipdb; ipdb.set_trace()` in your tests.\n\nTo run the tests you will need to add `-- -s` to the test call. Since ipdb will need stdin and pytest will capture it. \n```bash\n./pants test --debug  <target>   -- -s\n```"
}
[/block]

[block:callout]
{
  "type": "info",
  "title": "Tip: using the IntelliJ/PyCharm remote debugger in tests",
  "body": "First, add the following target in some BUILD file (e.g., the one containing your other 3rd-party dependencies):\n\n```\npython_requirement_library(\n  name = \"pydevd-pycharm\",\n  requirements=[\"pydevd-pycharm==203.5419.8\"],  # Or whatever version you choose.\n)\n```\n\nYou can check this into your repo, for convenience.\n\nNow, use the remote debugger as usual:\n\n1. Start a Python remote debugging session in PyCharm, say on port 5000.\n\n2. Add the following code at the point where you want execution to pause and connect to the debugger:\n\n```\nimport pydevd_pycharm\npydevd_pycharm.settrace('localhost', port=5000, stdoutToServer=True, stderrToServer=True)\n```\n\nRun your test with `./pants test --debug` as usual. \n\nNote: The first time you do so you may see some extra dependency resolution work, as `pydevd-pycharm` has now been added to the test's dependencies, via inference. If you have dependency inference turned off in your repo, you will have to manually add a temporary explicit dependency in your test target on the `pydevd-pycharm` target."
}
[/block]

[block:api-header]
{
  "title": "Timeouts"
}
[/block]
Pants can cancel tests which take too long. This is useful to prevent tests from hanging indefinitely.

To add a timeout for a particular `python_tests` target, set the `timeout` field to an integer value of seconds, like this:
[block:code]
{
  "codes": [
    {
      "code": "python_tests(\n    name=\"tests\",\n    timeout=120, # seconds.\n)",
      "language": "python",
      "name": "BUILD"
    }
  ]
}
[/block]
This timeout will apply to each file belonging to the `python_tests` target, meaning that `test_f1.py` will have a timeout of 120 seconds and `test_f2.py` will have a timeout of 120 seconds. If you want finer-grained timeouts, create a dedicated `python_tests` target for each file:
[block:code]
{
  "codes": [
    {
      "code": "python_tests(\n    name=\"test_f1\",\n    sources=[\"test_f1.py\"],\n    timeout=20,\n)\n\npython_tests(\n    name=\"test_f2\",\n    sources=[\"test_f2.py\"],\n    timeout=35,\n)",
      "language": "python",
      "name": "BUILD"
    }
  ]
}
[/block]
You can also set a default value and a maximum value in `pants.toml`:
[block:code]
{
  "codes": [
    {
      "code": "[pytest]\ntimeout_default = 60\ntimeout_maximum = 600",
      "language": "toml",
      "name": "pants.toml"
    }
  ]
}
[/block]
If a target sets its `timeout` higher than `--pytest-timeout-maximum`, Pants will use the value in `--pytest-timeout-maximum`.
[block:callout]
{
  "type": "info",
  "title": "Tip: temporarily ignoring timeouts",
  "body": "When debugging locally, such as with `pdb`, you might want to temporarily disable timeouts. To do this, set `--no-pytest-timeouts`:\n\n```bash\n$ ./pants test project/app_test.py --no-pytest-timeouts\n```"
}
[/block]

[block:api-header]
{
  "title": "Test utilities and resources"
}
[/block]
### Test utilities

Use the target type `python_library` for test utilities, rather than `python_tests`. 

For example:
[block:code]
{
  "codes": [
    {
      "code": "# The default `sources` includes all files other than \n# `!*_test.py`, `!test_*.py`, and `tests.py`.\npython_library(name=\"testutils\")\n\n# We leave off the `dependencies` field because Pants will infer \n# it based on import statements.\npython_tests(name=\"tests\")",
      "language": "python",
      "name": "helloworld/BUILD"
    },
    {
      "code": "...\n\n@contextmanager\ndef setup_tmpdir(files: Mapping[str, str]) -> Iterator[str]:\n    with temporary_dir() as tmpdir:\n        ...\n        yield rel_tmpdir",
      "language": "python",
      "name": "helloworld/testutils.py"
    },
    {
      "code": "from helloworld.testutils import setup_tmpdir\n\ndef test_app() -> None:\n    with setup_tmpdir({\"f.py\": \"print('hello')\"}):\n       assert ...",
      "language": "python",
      "name": "helloworld/app_test.py"
    }
  ]
}
[/block]
### Resources

Refer to [Resources](doc:resources) for how to include resource files in your tests.

It's often most convenient to use `files` and `relocated_files` targets in your test code, although you can also use `resources`.  
[block:api-header]
{
  "title": "Testing your packaging pipeline"
}
[/block]
You can include the result of `./pants package` in your test through the `runtime_package_dependencies` field. Pants will run the equivalent of `./pants package` beforehand and copy the built artifact into the test's chroot, allowing you to test things like that the artifact has the correct files present and that it's executable.

This allows you to test your packaging pipeline by simply running `./pants test ::`, without needing custom integration test scripts.

To depend on a built package, use the `runtime_package_dependencies` field on the `python_tests` target, which is a list of addresses to targets that can be built with `./pants package`, such as `pex_binary`, `python_awslambda`, and `archive` targets. Pants will build the package before running your test, and insert the file into the test's chroot. It will use the same name it would normally use with `./pants package`, except without the `dist/` prefix.

For example:
[block:code]
{
  "codes": [
    {
      "code": "# This target teaches Pants about our non-test Python files.\npython_library(name=\"lib\")\n\npex_binary(\n    name=\"bin\",\n    entry_point=\"say_hello.py\",\n)\n\npython_tests(\n    name=\"tests\",\n    runtime_package_dependencies=[\":bin\"],\n)",
      "language": "python",
      "name": "helloworld/BUILD"
    },
    {
      "code": "print(\"Hello, test!\")",
      "language": "python",
      "name": "helloworld/say_hello.py"
    },
    {
      "code": "import subprocess\n\ndef test_say_hello():\n    assert  b\"Hello, test!\" in subprocess.check_output(['helloworld/bin.pex'])",
      "language": "python",
      "name": "helloworld/test_binary.py"
    }
  ]
}
[/block]

[block:api-header]
{
  "title": "Coverage"
}
[/block]
To report coverage using [`Coverage.py`](https://coverage.readthedocs.io/en/coverage-5.1/), set the option `--test-use-coverage`:

```bash
$ ./pants test --use-coverage helloworld/util/lang_test.py
```

Or to permanently use coverage, set in your config file:
[block:code]
{
  "codes": [
    {
      "code": "[test]\nuse_coverage = true",
      "language": "toml",
      "name": "pants.ci.toml"
    }
  ]
}
[/block]

[block:callout]
{
  "type": "warning",
  "body": "Coverage defaults to running with Python 3.6+ when generating a report, which means it may fail to parse Python 2 syntax and Python 3.8+ syntax. You can fix this by changing the interpreter constraints for running Coverage:\n\n```toml\n# pants.toml\n[coverage-py]\ninterpreter_constraints = [\">=3.8\"]\n```\n\nHowever, if your repository has some Python 2-only code and some Python 3-only code, you will not be able to choose an interpreter that works with both versions. So, you will need to set up a `.coveragerc` config file and set `ignore_errors = True` under `[report]`, like this:\n\n```\n# .coveragerc\n[report]\nignore_errors = True\n```\n\n`ignore_errors = True` means that those files will simply be left off of the final coverage report.\n\n(Pants should autodiscover the config file `.coveragerc`. See [coverage-py](https://www.pantsbuild.org/docs/reference-coverage-py#section-config-discovery).)\n\nThere's a proposal for Pants to fix this by generating multiple reports when necessary: https://github.com/pantsbuild/pants/issues/11137. We'd appreciate your feedback.",
  "title": "Failure to parse files?"
}
[/block]
Coverage will report data on any files encountered during the tests. You can filter down the results by using the option `--coverage-py-filter` and passing the name(s) of modules you want coverage data for. Each module name is recursive, meaning submodules will be included. For example:

```bash
$ ./pants test --use-coverage helloworld/util/lang_test.py --coverage-py=helloworld.util
$ ./pants test --use-coverage helloworld/util/lang_test.py --coverage-py='["helloworld.util.lang", "helloworld.util.lang_test"]'
```
[block:callout]
{
  "type": "warning",
  "title": "Coverage will not report on unencountered files",
  "body": "Coverage will only report on files encountered during the tests' run. This means that your coverage score may be misleading; even with a score of 100%, you may have files without any tests.\n\nThis is a shortcoming of Coverage itself."
}
[/block]
Pants will default to writing the results to the console, but you can also output in HTML, XML, JSON, or the raw SQLite file:
[block:code]
{
  "codes": [
    {
      "code": "[coverage-py]\nreport = [\"raw\", \"xml\", \"html\", \"json\", \"console\"]",
      "language": "toml",
      "name": "pants.toml"
    }
  ]
}
[/block]
You can change the output dir with the `output_dir` option in the `[coverage-py]` scope.

You may use a Coverage config file, e.g. `.coveragerc` or `pyproject.toml`. Pants will autodiscover the config file for you, and you can also set `[coverage-py].config` in your `pants.toml` to point to a non-standard location. You must include `relative_files = True` in the `[run]` section for Pants to work.
[block:code]
{
  "codes": [
    {
      "code": "[run]\nrelative_files = True\nbranch = True",
      "language": "text",
      "name": ".coveragerc"
    }
  ]
}
[/block]
When generating HTML, XML, and JSON reports, you can automatically open the reports through the option `--test-open-coverage`.
[block:api-header]
{
  "title": "JUnit XML results"
}
[/block]
Pytest can generate [JUnit XML result files](https://docs.pytest.org/en/latest/usage.html#creating-junitxml-format-files). This allows you to hook up your results, for example, to dashboards.

To save JUnit XML result files, set the option `junit_xml_dir` in the `[pytest]` scope, like this:
[block:code]
{
  "codes": [
    {
      "code": "[pytest]\njunit_xml_dir = \"dist/pytest_results\"",
      "language": "toml",
      "name": "pants.toml"
    }
  ]
}
[/block]
You may also want to set the option `junit_family` in the `[pytest]` scope to change the format. Run `./pants help-advanced pytest` for more information.